--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
                     <button class="btn" type="submit"><i class="fas fa-right-to-bracket" style="margin-right:8px;"></i> Sign In</button>
                 </form>
                 <div class="muted">New here? <a id="link-to-signup">Create an account</a></div>
-                <div class="muted" style="margin-top:6px;">All right reserved: developed by, Eng. "Hipolito Alexis"</div>
+                <div class="muted" style="margin-top:6px;">email me: hipotech@techlogist: developed by, Eng. "Hipolito Alexis"</div>
             </div>
 
             <div id="section-signup" class="hidden">
@@ -253,3 +253,4 @@
 </body>
 
 </html>
+
